plugins {
    id 'java'
}

group = 'ir.ac.kntu'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'net.sourceforge.pmd:pmd-java:6.55.0'
    testImplementation 'com.puppycrawl.tools:checkstyle:10.12.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    
    // JDBC SQLite driver for database persistence
    implementation 'org.xerial:sqlite-jdbc:3.42.0.0'
}

test {
    useJUnitPlatform()
}
